force-app/main/default/objects/Int_OFAC__c/Int_OFAC__c.object-meta.xml
<CustomObject>
    <label>Int OFAC</label>
    <nameField>
        <label>Int OFAC Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Int OFAC</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>