force-app/main/default/objects/Int_OFAC__c/fields/Additional_Info_2__c.field-meta.xml
<CustomField>
    <fullName>Additional_Info_2__c</fullName>
    <label>Additional Info 2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>