force-app/main/default/objects/Int_OFAC__c/fields/CCVAN_VL__c.field-meta.xml
<CustomField>
    <fullName>CCVAN_VL__c</fullName>
    <label>CCVAN VL</label>
    <length>100</length>
    <type>Text</type>
</CustomField>