force-app/main/default/objects/Int_OFAC__c/fields/DLL_Legal_Entity_Name__c.field-meta.xml
<CustomField>
    <fullName>DLL_Legal_Entity_Name__c</fullName>
    <label>DLL Legal Entity Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>