force-app/main/default/objects/Int_OFAC__c/fields/Equipment_Address_Line_2__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Address_Line_2__c</fullName>
    <label>Equipment Address Line 2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>