force-app/main/default/objects/Int_OFAC__c/fields/Equipment_Building_Number__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Building_Number__c</fullName>
    <label>Equipment Building Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>