force-app/main/default/objects/Int_OFAC__c/fields/Equipment_Country__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Country__c</fullName>
    <label>Equipment Country</label>
    <length>100</length>
    <type>Text</type>
</CustomField>