force-app/main/default/objects/Int_OFAC__c/fields/Equipment_State_Province__c.field-meta.xml
<CustomField>
    <fullName>Equipment_State_Province__c</fullName>
    <label>Equipment State Province</label>
    <length>100</length>
    <type>Text</type>
</CustomField>