force-app/main/default/objects/Int_OFAC__c/fields/Equipment_Street_Name__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Street_Name__c</fullName>
    <label>Equipment Street Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>