force-app/main/default/objects/Int_OFAC__c/fields/Primary_Address_Line_2__c.field-meta.xml
<CustomField>
    <fullName>Primary_Address_Line_2__c</fullName>
    <label>Primary Address Line 2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>