force-app/main/default/objects/Int_OFAC__c/fields/Primary_Building_Number__c.field-meta.xml
<CustomField>
    <fullName>Primary_Building_Number__c</fullName>
    <label>Primary Building Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>