force-app/main/default/objects/Int_OFAC__c/fields/Primary_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Primary_Postal_Code__c</fullName>
    <label>Primary Postal Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>