force-app/main/default/objects/Int_OFAC__c/fields/Primary_Street_Name__c.field-meta.xml
<CustomField>
    <fullName>Primary_Street_Name__c</fullName>
    <label>Primary Street Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>