force-app/main/default/objects/Int_OFAC__c/fields/Roles__c.field-meta.xml
<CustomField>
    <fullName>Roles__c</fullName>
    <label>Roles</label>
    <length>100</length>
    <type>Text</type>
</CustomField>