force-app/main/default/objects/Int_OFAC__c/fields/Row_Type_Code__c.field-meta.xml
<CustomField>
    <fullName>Row_Type_Code__c</fullName>
    <label>Row Type Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>