force-app/main/default/objects/Int_OFAC__c/fields/System_Id_Type__c.field-meta.xml
<CustomField>
    <fullName>System_Id_Type__c</fullName>
    <label>System Id Type</label>
    <length>30</length>
    <type>Text</type>
</CustomField>