force-app/main/default/objects/Int_OFAC__c/fields/System_Id_Value__c.field-meta.xml
<CustomField>
    <fullName>System_Id_Value__c</fullName>
    <label>System Id Value</label>
    <length>100</length>
    <type>Text</type>
</CustomField>