force-app/main/default/objects/Int_OFAC__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Committed__c</columns>
    <columns>Billing_Address_Line_1__c</columns>
    <columns>EIN__c</columns>
    <columns>Equipment_Address_Line_1__c</columns>
    <columns>Equipment_Address_Line_2__c</columns>
    <columns>Equipment_City__c</columns>
    <columns>Equipment_Country__c</columns>
    <columns>Equipment_Postal_Code__c</columns>
    <columns>Equipment_State_Province__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>